fix merge inconsistencies
