# lam4doc/entrypoints/api/openapi/lam.yml
@@ -15,40 +15,31 @@ info:
   version: 1.0.1
 
 servers:
-  - url: 'http://localhost:5000/'
+  - url: 'http://localhost:4050/'
     description: Default server
 
 components:
-  parameters:
-    exampleParam:
-      in: query
-      name: exampleParam
-      required: false
-      schema:
-        type: string
-      description: Example parameter
   schemas:
     UPLOAD_SCHEMA:
-        type: object
-        description: The LAM properties document.
-        properties:
-          lam_properties_document:
-            type: string
-            format: binary
-            description: The LAM properties document.
-          lam_classes_document:
-            type: string
-            format: binary
-            description: The LAM classes document.
-          celex_classes_document:
-            type: string
-            format: binary
-            description: The CELEX classes document.
-          dataset_name:
-            type: string
-        required:
-          - dataset_name
-
+      type: object
+      description: The LAM properties document.
+      properties:
+        lam_properties_document:
+          type: string
+          format: binary
+          description: The LAM properties document.
+        lam_classes_document:
+          type: string
+          format: binary
+          description: The LAM classes document.
+        celex_classes_document:
+          type: string
+          format: binary
+          description: The CELEX classes document.
+        dataset_name:
+          type: string
+      required:
+        - dataset_name
 
 paths:
   /generate-report:
@@ -60,7 +51,15 @@ paths:
           description: OK.
         5XX:
           description: Unexpected Error.
-
+  /generate-indexes:
+    get:
+      operationId: lam4doc.entrypoints.api.handlers.generate_indexes
+      description: Endpoint to generate the LAM indexes.
+      responses:
+        200:
+          description: OK.
+        5XX:
+          description: Unexpected Error.
   /upload-rdf:
     post:
       operationId: lam4doc.entrypoints.api.handlers.upload_rdfs
@@ -71,17 +70,6 @@ paths:
           multipart/form-data:
             schema:
               $ref: '#/components/schemas/UPLOAD_SCHEMA'
-      responses:
-        200:
-          description: OK.
-        5XX:
-          description: Unexpected Error.
-
-
-  /generate-indexes:
-    get:
-      operationId: lam4doc.entrypoints.api.handlers.generate_indexes
-      description: Endpoint to generate the LAM indexes.
       responses:
         200:
           description: OK.
